--- a/doc/Between stations metrics.ipynb
+++ b/doc/Between stations metrics.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,7 +17,9 @@
    "source": [
     "# Known issues\n",
     "* if train doesn't stay at the station for enough time to get a request where it's `AtStation` we miss that data\n",
-    "* station to station metrics should only look at consecutive stations"
+    "* station to station metrics should only look at consecutive stations\n",
+    "\n",
+    "#### Note: queries tested over 2019-09 data"
    ]
   },
   {
@@ -29,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -41,14 +43,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[('requestid', 1), ('id', 32909720863), ('station_char', 'SHW1'), ('subwayline', 'YUS'), ('system_message_type', 'Normal'), ('timint', Decimal('0.0')), ('traindirection', 'North'), ('trainid', 132), ('train_message', 'AtStation'), ('train_dest', 'Southbound<br/> To Union')]\n"
+      "[('requestid', 1818), ('id', 32908181398), ('station_char', 'PAP1'), ('subwayline', 'BD'), ('system_message_type', 'Normal'), ('timint', Decimal('14.413166221671826')), ('traindirection', 'East'), ('trainid', 205), ('train_message', 'Arriving'), ('train_dest', 'Westbound<br/> To Kipling')]\n"
      ]
     }
    ],
@@ -83,24 +85,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "sql = '''\n",
     "DROP MATERIALIZED VIEW IF EXISTS arrival_times CASCADE; \n",
     "CREATE MATERIALIZED VIEW arrival_times AS \n",
-    "WITH before_after AS (\n",
-    "SELECT subwayline, station_char, trainid,\n",
-    "train_message, create_date,\n",
-    "LAG(train_message) OVER (PARTITION BY subwayline, station_char, trainid ORDER BY create_date) as previous_message,\n",
-    "FROM ntas_data\n",
-    "JOIN requests USING (requestid)\n",
-    ")\n",
-    "SELECT subwayline, station_char, trainid, create_date as arrive_time\n",
-    "FROM before_after\n",
-    "WHERE train_message = 'AtStation'\n",
-    "AND previous_message = 'Arriving'\n",
+    "  WITH before_after AS (\n",
+    "    SELECT subwayline, station_char, trainid,\n",
+    "    train_message, create_date,\n",
+    "    LAG(train_message) OVER (PARTITION BY subwayline, station_char, trainid ORDER BY create_date) as previous_message\n",
+    "    FROM ntas_data\n",
+    "    JOIN requests USING (requestid)\n",
+    "  )\n",
+    "  SELECT subwayline, station_char, trainid, create_date as arrive_time\n",
+    "  FROM before_after\n",
+    "  WHERE train_message = 'AtStation'\n",
+    "  AND previous_message = 'Arriving'\n",
     "''' \n",
     "with con:\n",
     "    with con.cursor() as cur:\n",
@@ -122,7 +124,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -165,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -269,7 +271,7 @@
        "4             61.0  "
       ]
      },
-     "execution_count": 24,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -289,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -393,7 +395,7 @@
        "4            411.0  "
       ]
      },
-     "execution_count": 27,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
