proccess data for headway time calculation

--- a/doc/subway_station_wait_times.ipynb
+++ b/doc/subway_station_wait_times.ipynb
@@ -18,6 +18,7 @@
     "* Reported times outside of normal operating hours skewing results\n",
     "* Certain dates have a much lower data volume (e.g. 15/09, 21/09)\n",
     "* Sometimes we have multiple trains reporting the same wait time, when status is Delayed. In that case we are choosing one randomly as the closest one (lowest train number), but this can affect the consistency of the dataset used in part 2\n",
+    "* `create_date` sometimes shows inconsistent behaviour, it should be replaced by `request_date`\n",
     "\n",
     "#### Note: queries tested over 2019-09 data"
    ]
